[package]
name = "check_tplink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0"
clap = { version = "4.4.11", features = ["derive", "env"] }
lazy_static = "1.4"
regex = "1.10"
reqwest = { version = "0.11", features = ["native-tls-vendored"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
